--- a/curriculum.tex
+++ b/curriculum.tex
@@ -27,30 +27,145 @@
 \begin{cvsection}{Education}
 
     \makesectionitemheader
-        {Analista en Computación}                 {FaMAF, UNC}
-        {eq. to \it{Computer Science Bachelor}}   {Córdoba, Argentina}
+        {Computer Science Bachelor eq.}  {FaMAF, UNC}
+        {\it{Analista en Computación}}   {Córdoba, Argentina}
         \begin{sectionitemlist}
-        \item { GPA: 8.4 (10 scale) }
-        \item { Graduation Date: July 2021 }
-        \item { Taken Subjects Highlights: }
+        \item { \textbf{GPA}: 8.4 (10 scale) }
+        \item { \textbf{Graduation Date}: July 2021 }
+        \item { \textbf{Taken Subjects Highlights}: }
             \begin{colsectionitemlist}{3}
                 \item{Data Structures \& Algorithms}
                 \item{Probability and Statistics}
                 \item{Numerical Analysis}
                 \item{Software Engineering}
+                \item{Computer Organization \& Architecture}
             \end{colsectionitemlist}
         \end{sectionitemlist}
 
     \makesectionitemheader
-        {Licenciatura en Ciencias de la Computación}    {FaMAF, UNC}
-        {eq. to \it{Computer Science Mst.}}             {Córdoba, Argentina}
+        {Computer Science Master eq.}                            {Córdoba, Argentina}
+        {\it{Licenciatura en Ciencias de la Computación}}  {FaMAF, UNC}
         \begin{sectionitemlist}
-        \item { GPA: 8.5 (10 scale) }
-        \item { Expected Graduation Date: December 2024 }
-        \item { Taken Subjects Highlights: – Neural Networks}
+        \item { \textbf{GPA}: 8.5 (10 scale) }
+        \item { \textbf{Expected Graduation Date}: December 2024 }
+        \item { \textbf{Taken Subjects Highlights}: – Neural Networks}
         \end{sectionitemlist}
 
 \end{cvsection}
+
+%-------------------------------------------------------------------------------
+%   SECTION: EXPERIENCE
+%-------------------------------------------------------------------------------
+
+\begin{cvsection}{Experience}
+
+    %---------------------------------------------------------------------------
+    %   SECTION ITEM: Venmo
+    %---------------------------------------------------------------------------
+
+    \makesectionitemheader
+        {Venmo (PayPal) - Taller Technologies}    {Sept. 2020 - Present}
+        {iOS Developer}   {Remote - Contractor}
+        \begin{sectionitemlist}
+        \item{Used \textbf{Swift} with \textbf{Reactive MVVM} \& \textbf{Coordinator} patterns}
+        \item{Automated fix to replace wrongly set images to \char`\~ 200K users with picture comparison automation using \textbf{structural similarity} in \textbf{Python}}
+        \item{Improved authentication experience for ??K business profiles as measured by ?? by implementing profile-based passcode protection using Apple's native \textbf{Keychain}}
+        \item{Improved visibility and discovery for ??K business profiles as measured by ?? by participating in the following developments, using \textbf{Swift}:}
+            \begin{colsectionitemlist}{3}
+            \item{Social feed business cards}
+            \item{Photo Gallery}
+            \item{Navigation Redesign}
+            \end{colsectionitemlist}
+        \end{sectionitemlist}
+
+    %---------------------------------------------------------------------------
+    %   SECTION ITEM: IncluIT / SimTLIX
+    %---------------------------------------------------------------------------
+
+    \makesectionitemheader
+        {IncluIT / SimTLIX}                     {Jun. 2019 - Sept. 2020}
+        {Software Developer}                    {Córdoba, Argentina}
+
+        \begin{sectionitemlist}
+
+        \item{\textit{Pulse Secure} (VPN application)}
+            \begin{sectionitemlist}
+            \item{Migrated Firewall from \textbf{Kernel Extensions} to the \textbf{Network Extension framework} to support \textit{macOS Big Sur} using \textbf{Objective C} and \textbf{C++}}
+            \end{sectionitemlist}
+
+        \item{\textit{Avaya Workspace} (telecommunications application)}
+            \begin{sectionitemlist}
+            \item{Developed real-time background blur PoC for video conferences using \textbf{Keras} with \textbf{Python} and \textbf{TensorFlow Lite} with \textbf{Objective C} and \textbf{C++} in iOS and macOS}
+            \item{Worked on improvement and bugfixing for the \textbf{macOS} and \textbf{iOS} apps using \textbf{Objective C}}
+            \end{sectionitemlist}
+
+        \item{\textit{Jerárquicos} (health insurance company)}
+            \begin{sectionitemlist}
+            \item{Scored the highest customer compliance rate ever in the annual performance review}
+            \item{Eased the user experience by integrating the use of QR readers into the iOS app using \textbf{Swift}}
+            \item{Refactored several existing flows in the application to follow a proper \textbf{separation of concerns}}
+            \item {Increased user interaction by developing a flow to make pharmacy related purchases within the app using \textbf{Swift}}
+            \end{sectionitemlist}
+
+        \item{\textit{Telecom - Personal} (telecommunications company)}
+            \begin{sectionitemlist}
+            \item{Automated the internal dependencies integration system (previously a manual process) by refactoring internal dependencies from \textbf{static} to \textbf{dynamic} frameworks to use \textbf{Carthage}}
+            \item{Personalized the user experience by improving the authentication library to launch different experiences on login using \textbf{Swift} with the \textbf{WebKit} framework}
+            \end{sectionitemlist}
+
+        \end{sectionitemlist}
+
+    %---------------------------------------------------------------------------
+    %   SECTION ITEM: Globant / Royal Caribbean
+    %---------------------------------------------------------------------------
+
+    \makesectionitemheader
+        {Globant - Royal Caribbean}               {Feb. 2019 - Jun. 2019}
+        {iOS Developer}                           {Córdoba, Argentina}
+        \begin{sectionitemlist}
+        \item{Improved code coverage by adding \textbf{unit tests} using \textbf{Swift}}
+        \item{Improved code style and quality by fixing \textbf{SwiftLint} issues}
+        \end{sectionitemlist}
+
+    %---------------------------------------------------------------------------
+    %   SECTION ITEM: JCOR
+    %---------------------------------------------------------------------------
+
+    \makesectionitemheader
+        {JCOR}                                    {Jun. 2018 - Feb. 2019}
+        {Full Stack Developer}                    {Córdoba, Argentina}
+        \begin{sectionitemlist}
+        \item{\textit{Taaxii} (transportation company)}
+            \begin{sectionitemlist}
+            \item{Developed car-pooling flows and refactored login and register modules using \textbf{Swift} for iOS, \textbf{Java} for \textbf{Android}, \textbf{Java} with \textbf{Spring} for the back-end and \textbf{MySQL}}
+            \item{Improved regressions by automating test cases using \textbf{Selenium} and \textbf{Appium}}
+            \end{sectionitemlist}
+        \item{\textit{Abogados} (management software)}
+            \begin{sectionitemlist}
+            \item{Developed an activity tracker using \textbf{Groovy on Rails} and \textbf{PostgreSQL} database}
+            \end{sectionitemlist}
+        \end{sectionitemlist}
+
+    %---------------------------------------------------------------------------
+    %   SECTION ITEM: AVHCLUBAR
+    %---------------------------------------------------------------------------
+
+    \makesectionitemheader
+        {AVH Club AR} {Jun. 2017 - Jun. 2018}
+        {Freelance Web Developer} {Córdoba, Argentina}
+        \begin{sectionitemlist}
+        \item{Developed and maintained the website of the \textit{Alexander von Humboldt Foundation Alumni Society in Argentina}}
+        \item{Used \textbf{PHP}, \textbf{MySQL}, \textbf{HTML} and \textbf{CSS}}
+        \item{Gave autonomy to the client by creating an administrator page to update news, blog and photos}
+        \item{Automated mail campaigns to  \char`\~ 100 members using \textbf{MailChimp}}
+        \end{sectionitemlist}
+
+\end{cvsection}
+
+%-------------------------------------------------------------------------------
+%   EXTRACURRICULAR ACTIVITY
+%-------------------------------------------------------------------------------
+
 
 %-------------------------------------------------------------------------------
 %   END
