--- a/curriculum.tex
+++ b/curriculum.tex
@@ -43,8 +43,8 @@
         \end{sectionitemlist}
 
     \makesectionitemheader
-        {Computer Science Master eq.}                            {Córdoba, Argentina}
-        {\it{Licenciatura en Ciencias de la Computación}}  {FaMAF, UNC}
+        {Computer Science Master eq.}                      {FaMAF, UNC}
+        {\it{Licenciatura en Ciencias de la Computación}}  {Córdoba, Argentina}
         \begin{sectionitemlist}
         \item { \textbf{GPA}: 8.5 (10 scale) }
         \item { \textbf{Expected Graduation Date}: December 2024 }
@@ -151,8 +151,8 @@
     %---------------------------------------------------------------------------
 
     \makesectionitemheader
-        {AVH Club AR} {Jun. 2017 - Jun. 2018}
-        {Freelance Web Developer} {Córdoba, Argentina}
+        {AVH Club AR}                   {Jun. 2017 - Jun. 2018}
+        {Freelance Web Developer}       {Córdoba, Argentina}
         \begin{sectionitemlist}
         \item{Developed and maintained the website of the \textit{Alexander von Humboldt Foundation Alumni Society in Argentina}}
         \item{Used \textbf{PHP}, \textbf{MySQL}, \textbf{HTML} and \textbf{CSS}}
@@ -166,6 +166,27 @@
 %   EXTRACURRICULAR ACTIVITY
 %-------------------------------------------------------------------------------
 
+\begin{cvsection}{Extracurricular activity}
+
+    \makesectionitemheader
+        {PyData}                                      {2018 \& 2019 editions}
+        {Volunteer}                                   {Córdoba, Argentina} \\
+        \vspace{0.5ex}
+        {Helped the committee on different organizational tasks}
+
+    \makesectionitemheader
+        {Conference on Computer Science (JCC)}        {Oct. 25/27, 2017}
+        {Scholar}                                     {Rosario, Argentina} \\
+        \vspace{0.5ex}
+        {Received a scholarship to participate in the Conference on Computer Science at the National University of Rosario, Rosario, Argentina}
+
+    \makesectionitemheader
+        {Argentinian Programming Contest (TAP)}       {2018 \& 2019 editions}
+        {Participant}                                 {Córdoba, Argentina} \\
+        \vspace{0.5ex}
+        {Based on resolving a series of mathematical and algorithmic problems using programming skills}
+
+\end{cvsection}
 
 %-------------------------------------------------------------------------------
 %   END
