Add `Programming languages & tools` section

--- a/curriculum.tex
+++ b/curriculum.tex
@@ -21,6 +21,27 @@
 \end{cvheader}
 
 %-------------------------------------------------------------------------------
+%   SECTION: PROGRAMMING LANGUAGES
+%-------------------------------------------------------------------------------
+
+\begin{cvsection}{Programming languages \& tools}
+    \begin{colsectionitemlist}{5}
+
+    \item{Swift}
+    \item{TensorFlow Lite}
+    \item{Python}
+    \item{RxSwift}
+    \item{Objective C}
+    \item{JavaScript}
+    \item{C/C++}
+    \item{CoreML}
+    \item{Go}
+    \item{Dart (Flutter)}
+
+    \end{colsectionitemlist}
+\end{cvsection}
+
+%-------------------------------------------------------------------------------
 %   SECTION: EDUCATION
 %-------------------------------------------------------------------------------
 
@@ -94,7 +115,8 @@
         }
         \item{
             Automated fix to replace wrongly set images to \char`\~ 200K users with
-            picture comparison automation using \textbf{structural similarity} in \textbf{Python}
+            picture comparison automation using
+            \textbf{structural similarity} in \textbf{Python}
         }
         \item{
             Improved authentication experience business profiles implementing
@@ -150,6 +172,7 @@
             \end{sectionitemlist}
 
         % Jerárquicos
+        \pagebreak % TODO: this will need to be moved in the future
         \item{\textit{Jerárquicos} (health insurance company)}
             \begin{sectionitemlist}
             \item{
@@ -245,8 +268,8 @@
 
         \begin{sectionitemlist}
         \item{
-            Developed and maintained the website of the \textit{Alexander von Humboldt
-            Foundation Alumni Society in Argentina}
+            Developed and maintained the website of the
+            \textit{Alexander von Humboldt Foundation Alumni Society in Argentina}
         }
         \item{
             Used \textbf{PHP}, \textbf{MySQL}, \textbf{HTML} and \textbf{CSS}
