Fix minor typos and organization issues

--- a/curriculum.tex
+++ b/curriculum.tex
@@ -115,22 +115,22 @@
         }
         \item{
             Automated fix to replace wrongly set images to \char`\~ 200K users with
-            picture comparison automation using
-            \textbf{structural similarity} in \textbf{Python}
+            picture comparison using \textbf{structural similarity} in \textbf{Python}
         }
         \item{
-            Improved authentication experience business profiles implementing
+            Improved authentication experience for business profiles implementing
             profile-based passcode protection using Apple's native \textbf{Keychain}
         }
         \item{
-            Improved visibility and discovery for business profiles by participating
-            in the following developments, using \textbf{Swift}:
+            Participated in several projects to improve visibility and discovery
+            for business profiles, using \textbf{Swift}:
         }
         {
             \begin{colsectionitemlist}{3}
             \item{Social feed business cards}
             \item{Photo Gallery}
             \item{Navigation Redesign}
+            \item{Marketing Consent}
             \end{colsectionitemlist}
         }
 
@@ -157,13 +157,12 @@
             \end{sectionitemlist}
 
         % Avaya
-        \item{\textit{Pulse Secure} (VPN application)}
         \item{\textit{Avaya Workspace} (telecommunications application)}
             \begin{sectionitemlist}
             \item{
                 Developed real-time background blur PoC for video conferences using
                 \textbf{Keras} with \textbf{Python} and \textbf{TensorFlow Lite}
-                with \textbf{Objective C} and \textbf{C++} in iOS and macOS
+                with \textbf{Objective C} and \textbf{C++} for iOS and macOS
             }
             \item{
                 Worked on improvement and bug-fixing for the \textbf{macOS}
