Include python experience at Venmo

--- a/curriculum.tex
+++ b/curriculum.tex
@@ -106,12 +106,15 @@
 
     \makesectionitemheader
         {Venmo (PayPal) - Taller Technologies}              {Sept. 2020 - Present}
-        {iOS Developer}                                      {Remote - Contractor}
+        {iOS \& Python Developer}                            {Remote - Contractor}
 
         \begin{sectionitemlist}
 
         \item{
             Used \textbf{Swift} with \textbf{Reactive MVVM} \& \textbf{Coordinator} patterns
+        }
+        \item{
+            Used \textbf{Python} with \textbf{Django} and other tools \textbf{Docker}, \textbf{DataDog} \& \textbf{Kubernetes}
         }
         \item{
             Automated fix to replace wrongly set images to \char`\~ 200K users with
@@ -122,15 +125,16 @@
             profile-based passcode protection using Apple's native \textbf{Keychain}
         }
         \item{
-            Participated in several projects to improve visibility and discovery
-            for business profiles, using \textbf{Swift}:
+            Participated in several projects related to charity and business profiles:
         }
         {
             \begin{colsectionitemlist}{3}
             \item{Social feed business cards}
-            \item{Photo Gallery}
-            \item{Navigation Redesign}
-            \item{Marketing Consent}
+            \item{Business photo Gallery}
+            \item{Business navigation redesign}
+            \item{Business profile auto-promote}
+            \item{Charity profiles donations}
+            \item{Charity profiles discovery}
             \end{colsectionitemlist}
         }
 
