Update experience in Venmo

--- a/curriculum.tex
+++ b/curriculum.tex
@@ -28,15 +28,13 @@
     \begin{colsectionitemlist}{5}
 
     \item{Swift}
-    \item{TensorFlow Lite}
     \item{Python}
     \item{RxSwift}
     \item{Objective C}
     \item{JavaScript}
     \item{C/C++}
     \item{CoreML}
-    \item{Go}
-    \item{Dart (Flutter)}
+    \item{TensorFlow Lite}
 
     \end{colsectionitemlist}
 \end{cvsection}
@@ -105,36 +103,68 @@
     %---------------------------------------------------------------------------
 
     \makesectionitemheader
-        {Venmo (PayPal) - Taller Technologies}              {Sept. 2020 - Present}
-        {iOS \& Python Developer}                            {Remote - Contractor}
+        {Venmo (PayPal) - Taller Technologies}              {Sept. 2020 - Jan. 2023}
+        {Software Engineer}                                 {Remote - Contractor}
 
         \begin{sectionitemlist}
 
         \item{
-            Used \textbf{Swift} with \textbf{Reactive MVVM} \& \textbf{Coordinator} patterns
+            Led the design and development of features for business profiles on iOS such as:
+        }{
+            \begin{colsectionitemlist}{2}
+            \item{Business Profile Local Biometric and Passcode Authentication}
+            \item{Business Profile Discovery and Promotion (showcasing business profiles in the feed)}
+            \end{colsectionitemlist}
         }
+
         \item{
-            Used \textbf{Python} with \textbf{Django} and other tools \textbf{Docker}, \textbf{DataDog} \& \textbf{Kubernetes}
+            Worked on development and improvement of business profile features such as
+        }{
+            \begin{colsectionitemlist}{2}
+            \item{Navigation Redesign}
+            \item{Photo Gallery}
+            \item{Onboarding/Update}
+            \end{colsectionitemlist}
         }
+
         \item{
-            Automated fix to replace wrongly set images to \char`\~ 200K users with
-            picture comparison using \textbf{structural similarity} in \textbf{Python}
+            Participated in the effort to ensure the app was \textit{a11y} compliant
+            by conducting bug searches, analysis and resolution.
         }
+
         \item{
-            Improved authentication experience for business profiles implementing
-            profile-based passcode protection using Apple's native \textbf{Keychain}
-        }
-        \item{
-            Participated in several projects related to charity and business profiles:
-        }
-        {
+            Participated in the design and development of
+            different charity profile features both on iOS and back-end.
+        }{
             \begin{colsectionitemlist}{3}
-            \item{Social feed business cards}
-            \item{Business photo Gallery}
-            \item{Business navigation redesign}
-            \item{Business profile auto-promote}
-            \item{Charity profiles donations}
-            \item{Charity profiles discovery}
+            \item{Charity Donations}
+            \item{Charity Discovery}
+            \item{Charity Search}
+            \end{colsectionitemlist}
+        }
+
+        \item{
+            Automated fix to replace wrongly set images to with
+            picture comparison using structural similarity.
+        }
+
+        \item{
+            \textbf{Tech Stack}:
+        }{
+            \begin{colsectionitemlist}{1}
+            \item{
+                \textbf{iOS} with \textbf{Swift},
+                MVVM with Coordinator,
+                RxSwift,
+                UIKit (programmatic UI)
+            }
+            \item{
+                back-end with \textbf{Python},
+                Django,
+                Kubernetes,
+                DataDog,
+                Elastic Search
+            }
             \end{colsectionitemlist}
         }
 
