--- a/curriculum.tex
+++ b/curriculum.tex
@@ -118,7 +118,7 @@
         }
 
         \item{
-            Worked on development and improvement of business profile features such as
+            Worked on development and improvement of business profile features such as:
         }{
             \begin{colsectionitemlist}{2}
             \item{Navigation Redesign}
@@ -186,7 +186,13 @@
             \item{
                 Migrated Firewall from \textbf{Kernel Extensions} to the
                 \textbf{Network Extension framework} to support \textit{macOS Big Sur}
-                using \textbf{Objective C} and \textbf{C++}
+                using \textbf{Objective C} and \textbf{C++}.
+            }
+            \item{
+                Taught Objective C classes to guide colleagues new to the language.
+            }
+            \item{
+                Raised project code coverage to 85\% by writing and configuring unit tests.
             }
             \end{sectionitemlist}
 
@@ -205,7 +211,6 @@
             \end{sectionitemlist}
 
         % Jerárquicos
-        \pagebreak % TODO: this will need to be moved in the future
         \item{\textit{Jerárquicos} (health insurance company)}
             \begin{sectionitemlist}
             \item{
