Improve header line for each exp

--- a/curriculum.tex
+++ b/curriculum.tex
@@ -176,7 +176,7 @@
 
     \makesectionitemheader
         {IncluIT / SimTLIX}                             {Jun. 2019 - Sept. 2020}
-        {Software Developer}                                {Córdoba, Argentina}
+        {Software Engineer}                                {Córdoba, Argentina}
 
         \begin{sectionitemlist}
 
@@ -254,7 +254,7 @@
 
     \makesectionitemheader
         {Globant - Royal Caribbean}                         {Feb. 2019 - Jun. 2019}
-        {iOS Developer}                                         {Córdoba, Argentina}
+        {iOS Engineer}                                         {Córdoba, Argentina}
 
         \begin{sectionitemlist}
         \item{Improved code coverage by adding \textbf{unit tests} using \textbf{Swift}}
