--- a/curriculum.tex
+++ b/curriculum.tex
@@ -21,25 +21,6 @@
 \end{cvheader}
 
 %-------------------------------------------------------------------------------
-%   SECTION: PROGRAMMING LANGUAGES
-%-------------------------------------------------------------------------------
-
-\begin{cvsection}{Programming languages \& tools}
-    \begin{colsectionitemlist}{5}
-
-    \item{Swift}
-    \item{Python}
-    \item{RxSwift}
-    \item{Objective C}
-    \item{JavaScript}
-    \item{C/C++}
-    \item{CoreML}
-    \item{TensorFlow Lite}
-
-    \end{colsectionitemlist}
-\end{cvsection}
-
-%-------------------------------------------------------------------------------
 %   SECTION: EDUCATION
 %-------------------------------------------------------------------------------
 
@@ -72,24 +53,6 @@
 
         \end{sectionitemlist}
 
-    \makesectionitemheader
-        {Computer Science Master eq.}                               {FaMAF, UNC}
-        {Licenciatura en Ciencias de la Computación}        {Córdoba, Argentina}
-
-        \begin{sectionitemlist}
-
-        \item {
-            \textbf{GPA}: 8.5 (10 scale)
-        }
-        \item {
-            \textbf{Expected Graduation Date}: December 2024
-        }
-        \item {
-            \textbf{Taken Subjects Highlights}: – Neural Networks
-        }
-
-        \end{sectionitemlist}
-
 \end{cvsection}
 
 %-------------------------------------------------------------------------------
@@ -107,6 +70,16 @@
         {Software Engineer}                                 {Remote - Contractor}
 
         \begin{sectionitemlist}
+
+        \item{
+            Worked on \textbf{iOS with Swift} using \textbf{MVVM+Coordinator} pattern,
+            building programmatic UI with \textbf{UIKit} and \textbf{RxSwift}.
+        }
+
+        \item{
+            Worked on back-end with \textbf{Python} using the \textbf{Django} framework
+            and tools like \textbf{Kubernetes}, \textbf{DataDog}, \textbf{ElasticSearch}.
+        }
 
         \item{
             Led the design and development of features for business profiles on iOS such as:
@@ -144,28 +117,8 @@
         }
 
         \item{
-            Automated fix to replace wrongly set images to with
+            Automated fix to replace wrongly set images to 200k users with
             picture comparison using structural similarity.
-        }
-
-        \item{
-            \textbf{Tech Stack}:
-        }{
-            \begin{colsectionitemlist}{1}
-            \item{
-                \textbf{iOS} with \textbf{Swift},
-                MVVM with Coordinator,
-                RxSwift,
-                UIKit (programmatic UI)
-            }
-            \item{
-                back-end with \textbf{Python},
-                Django,
-                Kubernetes,
-                DataDog,
-                Elastic Search
-            }
-            \end{colsectionitemlist}
         }
 
         \end{sectionitemlist}
@@ -202,11 +155,11 @@
             \item{
                 Developed real-time background blur PoC for video conferences using
                 \textbf{Keras} with \textbf{Python} and \textbf{TensorFlow Lite}
-                with \textbf{Objective C} and \textbf{C++} for iOS and macOS
+                with \textbf{Objective C} and \textbf{C++} for iOS and macOS.
             }
             \item{
                 Worked on improvement and bug-fixing for the \textbf{macOS}
-                and \textbf{iOS} apps using \textbf{Objective C}
+                and \textbf{iOS} apps using \textbf{Objective C}.
             }
             \end{sectionitemlist}
 
@@ -215,19 +168,19 @@
             \begin{sectionitemlist}
             \item{
                 Scored the highest customer compliance rate
-                in 5 years at the annual performance review
+                in 5 years at the annual performance review.
             }
             \item{
                 Eased the user experience by integrating the use of
-                QR readers into the iOS app using \textbf{Swift}
+                QR readers into the iOS app using \textbf{Swift}.
             }
             \item{
                 Refactored several existing flows in the application
-                to follow a proper \textbf{separation of concerns}
+                to follow a proper \textbf{separation of concerns}.
             }
             \item {
                 Increased user interaction by developing a flow to make pharmacy
-                related purchases within the app using \textbf{Swift}
+                related purchases within the app using \textbf{Swift}.
             }
             \end{sectionitemlist}
 
@@ -237,12 +190,12 @@
             \item{
                 Automated the internal dependencies integration system
                 (previously a manual process) by refactoring internal dependencies
-                from \textbf{static} to \textbf{dynamic} frameworks to use \textbf{Carthage}
+                from \textbf{static} to \textbf{dynamic} frameworks to use \textbf{Carthage}.
             }
             \item{
                 Personalized the user experience by improving the authentication
                 library to launch different experiences on login using
-                \textbf{Swift} with the \textbf{WebKit} framework
+                \textbf{Swift} with the \textbf{WebKit} framework.
             }
             \end{sectionitemlist}
 
@@ -257,8 +210,8 @@
         {iOS Engineer}                                         {Córdoba, Argentina}
 
         \begin{sectionitemlist}
-        \item{Improved code coverage by adding \textbf{unit tests} using \textbf{Swift}}
-        \item{Improved code style and quality by fixing \textbf{SwiftLint} issues}
+        \item{Improved code coverage by adding \textbf{unit tests} using \textbf{Swift}.}
+        \item{Improved code style and quality by fixing \textbf{SwiftLint} issues.}
         \end{sectionitemlist}
 
     %---------------------------------------------------------------------------
@@ -277,11 +230,11 @@
             \item{
                 Developed car-pooling flows and refactored login and register
                 modules using \textbf{Swift} for iOS, \textbf{Java} for Android,
-                \textbf{Java} with \textbf{Spring} for the back-end and \textbf{MySQL}
+                \textbf{Java} with \textbf{Spring} for the back-end and \textbf{MySQL}.
             }
             \item{
                 Improved regressions by automating test cases
-                using \textbf{Selenium} and \textbf{Appium}
+                using \textbf{Selenium} and \textbf{Appium}.j
             }
             \end{sectionitemlist}
 
@@ -290,36 +243,11 @@
             \begin{sectionitemlist}
             \item{
                 Developed an activity tracker using
-                \textbf{Groovy on Rails} and \textbf{PostgreSQL} database
+                \textbf{Groovy on Rails}, \textbf{JavaScript + JQuery}
+                and \textbf{PostgreSQL} database.
             }
             \end{sectionitemlist}
 
-        \end{sectionitemlist}
-
-    %---------------------------------------------------------------------------
-    %   SECTION ITEM: AVHCLUBAR
-    %---------------------------------------------------------------------------
-
-    \makesectionitemheader
-        {AVH Club AR}                                       {Jun. 2017 - Jun. 2018}
-        {Freelance Web Developer}                              {Córdoba, Argentina}
-
-        \begin{sectionitemlist}
-        \item{
-            Developed and maintained the website of the
-            \textit{Alexander von Humboldt Foundation Alumni Society in Argentina}
-        }
-        \item{
-            Used \textbf{PHP}, \textbf{MySQL}, \textbf{HTML} and \textbf{CSS}
-        }
-        \item{
-            Gave autonomy to the client by creating
-            an administrator page to update news, blog and photos
-        }
-        \item{
-            Automated mail campaigns to  \char`\~ 100
-            members using \textbf{MailChimp}
-        }
         \end{sectionitemlist}
 
 \end{cvsection}
@@ -334,7 +262,7 @@
         {PyData}                                            {2018 \& 2019 editions}
         {Volunteer}                                         {Córdoba, Argentina} \\
         \vspace{0.5ex}
-        {Helped the committee on different organizational tasks}
+        {Helped the committee on different organizational tasks.}
 
     \makesectionitemheader
         {Conference on Computer Science (JCC)}              {Oct. 25/27, 2017}
@@ -342,7 +270,7 @@
         \vspace{0.5ex}
         {
             Received a scholarship to participate in the Conference on
-            Computer Science at the National University of Rosario, Rosario, Argentina
+            Computer Science at the National University of Rosario, Rosario, Argentina.
         }
 
     \makesectionitemheader
@@ -351,7 +279,7 @@
         \vspace{0.5ex}
         {
             Based on resolving a series of mathematical and algorithmic
-            problems using programming skills
+            problems using programming skills.
         }
 
 \end{cvsection}
