Add distillery to experience

--- a/curriculum.tex
+++ b/curriculum.tex
@@ -62,14 +62,35 @@
 \begin{cvsection}{Experience}
 
     %---------------------------------------------------------------------------
+    %   SECTION ITEM: Distillery
+    %---------------------------------------------------------------------------
+
+    \makesectionitemheader
+        {Distillery}                                               {March 2023}
+        {Senior iOS Developer}                                     {Remote - Contractor}
+
+        \begin{sectionitemlist}
+
+        % Pulse Secure
+        \item{
+            Worked for the \textit{eBay} (e-commerce application) project.
+        }
+
+        \end{sectionitemlist}
+
+    %---------------------------------------------------------------------------
     %   SECTION ITEM: Venmo
     %---------------------------------------------------------------------------
 
     \makesectionitemheader
         {Venmo (PayPal) - Taller Technologies}              {Sept. 2020 - Jan. 2023}
-        {Software Engineer}                                 {Remote - Contractor}
+        {Senior Software Engineer}                                 {Remote - Contractor}
 
         \begin{sectionitemlist}
+
+        \item{
+            Worked for the \textit{Venmo - PayPal} (digital wallet) project.
+        }
 
         \item{
             Worked on \textbf{iOS with Swift} using \textbf{MVVM+Coordinator} pattern,
@@ -129,7 +150,7 @@
 
     \makesectionitemheader
         {IncluIT / SimTLIX}                             {Jun. 2019 - Sept. 2020}
-        {Software Engineer}                                {Córdoba, Argentina}
+        {Semi Senior Software Engineer}                                {Córdoba, Argentina}
 
         \begin{sectionitemlist}
 
