List technologies used in eBay experience

--- a/curriculum.tex
+++ b/curriculum.tex
@@ -71,9 +71,13 @@
 
         \begin{sectionitemlist}
 
-        % Pulse Secure
+        % eBay
         \item{
-            Worked for the \textit{eBay} (e-commerce application) project.
+            Worked for the \textit{eBay} Payments Team, .
+        }
+
+        \item{
+            Worked on \textbf{iOS with Swift and Objective C} with \textbf{MVVM+Coordinator} pattern using \textbf{SwiftUI} and \textbf{Combine}.
         }
 
         \end{sectionitemlist}
